Don't lint generated files
We don't hold generated code to the same standard as human authored code.

Signed-off-by: Nic Cope <negz@rk0n.org>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,9 @@
 run:
   deadline: 2m
 
+  skip-files:
+  - "zz_generated\\..+\\.go$"
+
 output:
   # colored-line-number|line-number|json|tab|checkstyle|code-climate, default is "colored-line-number"
   format: colored-line-number
