--- a/.golangci.yml
+++ b/.golangci.yml
@@ -27,9 +27,9 @@ linters-settings:
     # report about shadowed variables
     check-shadowing: false
 
-  golint:
-    # minimal confidence for issues, default is 0.8
-    min-confidence: 0.8
+  revive:
+    # confidence for issues, default is 0.8
+    confidence: 0.8
 
   gofmt:
     # simplify code: gofmt with `-s` option, true by default
@@ -38,7 +38,7 @@ linters-settings:
   goimports:
     # put imports beginning with prefix after 3rd-party packages;
     # it's a comma-separated list of prefixes
-    local-prefixes: github.com/crossplane/crossplane
+    local-prefixes: github.com/crossplane/crossplane-runtime
 
   gocyclo:
     # minimal code complexity to report, 30 by default (but we recommend 10-20)
@@ -113,7 +113,7 @@ linters:
     - goimports
     - gofmt  # We enable this as well as goimports for its simplify mode.
     - prealloc
-    - golint
+    - revive
     - unconvert
     - misspell
     - nakedret
@@ -136,6 +136,7 @@ issues:
         - gosec
         - scopelint
         - unparam
+        - errchkjson
 
     # Ease some gocritic warnings on test files.
     - path: _test\.go
