Ensure the stale workflow uses fewer operations
We only get 1,000 operations per hour for every workflow that uses
GITHUB_TOKEN. We're now seeing the stale workflow use relatively few
operations with few to no stale issues open.

In addition to lowering the workflow's operation limit this change has
the workflow run once a day. It adds a new `/fresh` comment command that
can be used to instantly mark an issue or PR as not stale, rather than
waiting up to a day for the stale workflow to run.

Signed-off-by: Aditya Sharma <git@adi.run>

--- a/.github/workflows/commands.yml
+++ b/.github/workflows/commands.yml
@@ -90,3 +90,37 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         github_workspace: ${{ github.workspace }}
         version: v0.0.4
+
+  fresh:
+    runs-on: ubuntu-20.04
+    if: startsWith(github.event.comment.body, '/fresh')
+
+    steps:
+    - name: Extract Command
+      id: command
+      uses: xt0rted/slash-command-action@v1
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        command: fresh
+        reaction: "true"
+        reaction-type: "eyes"
+        allow-edits: "false"
+        permission-level: write
+    - name: Handle Command
+      uses: actions/github-script@v4
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          // Delete the stale label.
+          try {
+            await github.issues.deleteLabel({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: ['stale']
+            })
+            console.log("Deleted 'stale' label.")
+          }
+          catch(e) {
+            console.log("Failed to delete label 'stale' - does it exist?")
+          }
