--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,30 +1,20 @@
 run:
   timeout: 10m
 
-  skip-files:
-  - "zz_generated\\..+\\.go$"
-
 output:
   # colored-line-number|line-number|json|tab|checkstyle|code-climate, default is "colored-line-number"
-  format: colored-line-number
+  formats:
+    - format: colored-line-number
+      path: stderr
 
 linters:
   enable-all: true
   fast: false
-
+  
   disable:
     # These linters are all deprecated. We disable them explicitly to avoid the
     # linter logging deprecation warnings.
-    - deadcode
-    - varcheck
-    - scopelint
-    - structcheck
-    - interfacer
-    - exhaustivestruct
-    - ifshort
-    - golint
-    - maligned
-    - nosnakecase
+    - execinquery
 
     # These are linters we'd like to enable, but that will be labor intensive to
     # make existing code compliant.
@@ -41,7 +31,7 @@ linters:
     # These linters add whitespace in an attempt to make code more readable.
     # This isn't a widely accepted Go best practice, and would be laborious to
     # apply to existing code.
-    - wsl
+    - wsl 
     - nlreturn
 
     # Warns about uses of fmt.Sprintf that are less performant than alternatives
@@ -58,7 +48,7 @@ linters:
     # 1 is covered by other linters. 2 is covered by wrapcheck, which can also
     # handle our use of crossplane-runtime's errors package. 3 is more strict
     # than we need. Not every error needs to be tested for equality.
-    - goerr113
+    - err113
 
     # These linters duplicate gocognit, but calculate complexity differently.
     - gocyclo
@@ -93,7 +83,7 @@ linters:
     # Warns about returning interfaces rather than concrete types. We do think
     # it's best to avoid returning interfaces where possible. However, at the
     # time of writing enabling this linter would only catch the (many) cases
-    # where we must return an interface.
+    # where we must return an interface. 
     - ireturn
 
     # Warns about returning named variables. We do think it's best to avoid
@@ -103,6 +93,14 @@ linters:
     # we believe it makes sense to return (ready bool) rather than just (bool)
     # to communicate what the bool means.
     - nonamedreturns
+
+    # Warns about taking the address of a range variable. This isn't an issue in
+    # Go v1.22 and above: https://tip.golang.org/doc/go1.22
+    - exportloopref
+
+    # Warns about using magic numbers. We do think it's best to avoid magic
+    # numbers, but we should not be strict about it.
+    - mnd
 
 linters-settings:
   errcheck:
@@ -114,14 +112,10 @@ linters-settings:
     # default is false: such cases aren't reported by default.
     check-blank: false
 
-    # [deprecated] comma-separated list of pairs of the form pkg:regex
-    # the regex is used to ignore names within pkg. (default "fmt:.*").
-    # see https://github.com/kisielk/errcheck#the-deprecated-method for details
-    ignore: fmt:.*,io/ioutil:^Read.*
-
   govet:
     # report about shadowed variables
-    check-shadowing: false
+    disable:
+      - shadow
 
   gofmt:
     # simplify code: gofmt with `-s` option, true by default
@@ -133,12 +127,9 @@ linters-settings:
       - standard
       - default
       - prefix(github.com/crossplane/crossplane-runtime)
+      - prefix(github.com/crossplane/crossplane)
       - blank
       - dot
-
-  maligned:
-    # print struct with more effective memory layout or not, false by default
-    suggest-new: true
 
   dupl:
     # tokens count to trigger issue, 150 by default
@@ -159,7 +150,8 @@ linters-settings:
     # XXX: if you enable this setting, unused will report a lot of false-positives in text editors:
     # if it's called for subdir of a project it can't find funcs usages. All text editor integrations
     # with golangci-lint call it on a directory with the changed file.
-    check-exported: false
+    exported-is-used: true
+    exported-fields-are-used: true
 
   unparam:
     # Inspect exported functions, default is false. Set to true if no external program/library imports your code.
@@ -197,7 +189,7 @@ linters-settings:
   nolintlint:
     require-explanation: true
     require-specific: true
-
+  
   depguard:
     rules:
       no_third_party_test_libraries:
@@ -214,14 +206,18 @@ linters-settings:
 
   interfacebloat:
     max: 5
-
+  
   tagliatelle:
     case:
       rules:
         json: goCamel
 
 issues:
-  # Excluding configuration per-path and per-linter
+  # Excluding generated files.
+  exclude-files:
+  - "zz_generated\\..+\\.go$"
+  - ".+\\.pb.go$"
+  # Excluding configuration per-path and per-linter.
   exclude-rules:
     # Exclude some linters from running on tests files.
     - path: _test(ing)?\.go
@@ -241,7 +237,7 @@ issues:
       text: "(unnamedResult|exitAfterDefer)"
       linters:
         - gocritic
-
+    
     # It's idiomatic to register Kubernetes types with a package scoped
     # SchemeBuilder using an init function.
     - path: apis/
@@ -280,6 +276,13 @@ issues:
       - gosec
       - gas
 
+    # This is about implicit memory aliasing in a range loop.
+    # This is a false positive with Go v1.22 and above.
+    - text: "G601:"
+      linters:
+      - gosec
+      - gas
+    
     # Some k8s dependencies do not have JSON tags on all fields in structs.
     - path: k8s.io/
       linters:
@@ -300,7 +303,7 @@ issues:
   new: false
 
   # Maximum issues count per one linter. Set to 0 to disable. Default is 50.
-  max-per-linter: 0
+  max-issues-per-linter: 0
 
   # Maximum count of issues with the same text. Set to 0 to disable. Default is 3.
   max-same-issues: 0
