Update CODEOWNERS to reflect current state
This syncs with what we currently have in c/c. In practice we've dropped
reviewers because everything blocks on reviewers.

Signed-off-by: Nic Cope <nicc@rk0n.org>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -22,7 +22,7 @@
 # See also OWNERS.md for governance details
 
 # Fallback owners
-*                                   @crossplane/crossplane-maintainers @crossplane/crossplane-reviewers
+*                                   @crossplane/crossplane-maintainers
 
 # Governance owners - steering committee
 /README.md                           @crossplane/steering-committee
