Fix EARTHLY_VERSION matching in GitHub Workflows
Signed-off-by: Nic Cope <nicc@rk0n.org>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -38,7 +38,7 @@
         "^\\.github\\/workflows\\/[^/]+\\.ya?ml$"
       ],
       "matchStrings": [
-        "EARTHLY_VERSION '(?<currentValue>.*?)'\\n"
+        "EARTHLY_VERSION: '(?<currentValue>.*?)'\\n"
       ],
       "datasourceTemplate": "github-tags",
       "depNameTemplate": "earthly/earthly",
