--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -40,7 +40,7 @@
       "matchStrings": [
         "EARTHLY_VERSION: '(?<currentValue>.*?)'\\n"
       ],
-      "datasourceTemplate": "github-tags",
+      "datasourceTemplate": "github-releases",
       "depNameTemplate": "earthly/earthly",
       "extractVersionTemplate": "^v(?<version>.*)$"
     },
@@ -65,7 +65,7 @@
       "matchStrings": [
         "ARG GOLANGCI_LINT_VERSION=(?<currentValue>.*?)\\n"
       ],
-      "datasourceTemplate": "github-tags",
+      "datasourceTemplate": "github-releases",
       "depNameTemplate": "golangci/golangci-lint"
     },
     {
@@ -77,7 +77,7 @@
       "matchStrings": [
         "ARG CODEQL_VERSION=(?<currentValue>.*?)\\n"
       ],
-      "datasourceTemplate": "github-tags",
+      "datasourceTemplate": "github-releases",
       "depNameTemplate": "github/codeql-action",
       "extractVersionTemplate": "^codeql-bundle-(?<version>.*)$"
     },
